--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
             <div class="right controls" id="right">
             </div>
             <div class="imageLive"></div>
+            <div class="trackerHolder">
+                <div class="circle" id="0"></div>
+                <div class="circle" id="1"></div>
+                <div class="circle" id="2"></div>
+                <div class="circle" id="3"></div>
+                <div class="circle" id="4"></div>
+                <div class="circle" id="5"></div>
+            </div>
         </div>  
    </div>
 </body>
